# framework-rs

./: Cargo.toml  FUTURE_API.md  README.md
examples/: gui.rs  image.rs  input.rs  iter_pixel_chunks.rs  iter_pixel_overlapping_chunks.rs  iter_pixel_windows.rs  multiple_windows.rs  simple.rs  snake.rs  sound.rs
src/: app.rs  audio.rs  bitmap.rs  frame.rs  img.rs  lib.rs  sketch.rs  step.rs  time.rs
src/core/: app.rs  mod.rs  run.rs  sketch.rs  time.rs  window.rs
src/draw/: bitmap.rs  canvas.rs  chunk.rs  image.rs  macros.rs  mod.rs  window.rs
src/draw/bitmap/: bitmap2.rs  buf.rs  chunk.rs  draw.rs  iter.rs  mod.rs
src/gui/: canvas.rs  ctx.rs  ext.rs  mod.rs  window.rs
src/input/: btn.rs  keys.rs  mod.rs  mouse.rs  time.rs
src/math/: colours.txt  mod.rs
src/math2/: mod.rs  vec.rs
src/sound/: buf.rs  clip.rs  ctx.rs  file.rs  iter.rs  mod.rs  sample.rs  silence.rs  speakers.rs  track.rs  write.rs
src/util/: barycentric.rs  bresenham.rs  mod.rs  ref_counted.rs  triangle.rs
