[package]
name = "framework"
version = "0.2.0"
authors = ["yohandev"]
edition = "2018"

[dependencies]
audrey = { version = "0.3.0", optional = true }
image = "0.23.12"
num-traits = "0.2.14"
pixels = "0.2.0"
rand = "0.8.1"
rayon = "1.5.0"
rodio = { version = "0.13.0", default-features = false, optional = true }
vek = "0.13.0"
winit = "0.24.0"

[features]
default = ["sound"]
sound = ["audrey", "rodio"]